<resources>
    <string name="app_name">PhoneShopApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="button_buy_now">Buy now!</string>
    <string name="hs_second_text">Súper. Mega. Rápido.</string>
    <string name="hs_main_text">Iphone 12</string>
    <string name="hs_logo_text">New</string>
    <string name="discountPrice">$1,047</string>
    <string name="phone_name">Samsung Galaxy s20 Ultra</string>
    <string name="select_category">Select Category</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="product_details">Product Details</string>
    <string name="galaxy_note_20_ultra">Galaxy Note 20 Ultra</string>
    <string name="item">item</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="_6_000_us">$6,000 us</string>
    <string name="free">Free</string>
    <string name="checkout">Checkout</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="choose_brand">Choose brand</string>
    <string name="price">Price</string>
    <string name="choose_price">Choose price</string>
    <string name="size">Size</string>
    <string name="choose_size">Choose size</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="exynos_990">Exynos 990</string>
    <string name="_108_12_mp">108 + 12 mp</string>
    <string name="_8_gb">8 GB</string>
    <string name="_256_gb">256 GB</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="_128gb">128GB</string>
    <string name="_256gb">256gb</string>
    <string name="add_to_cart_1_500_00">Add to Cart $1,500.00</string>
    <string name="phonename">PhoneName</string>
    <string name="_3000_00">$3000.00</string>
    <string name="_1">1</string>
    <string-array name="brand">
        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
    </string-array>
    <string-array name="price">
        <item>$0 - $10000</item>
    </string-array>
    <string-array name="size">
        <item>4.5 to 5.5 inches</item>
    </string-array>
</resources>