<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainScreen.presentation.fragments.FilterBestSellerFragment">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/close_filter_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/custom_default_button"
                    android:backgroundTint="@color/select_default_text_color"
                    android:gravity="center"
                    android:src="@drawable/lines"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="69dp"
                    android:layout_marginEnd="44dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mark_pro"
                    android:gravity="center"
                    android:text="@string/filter_options"
                    android:textColor="@color/select_default_text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/apply_filter_button"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/custom_default_button"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/sf_pro"
                    android:text="@string/done"
                    android:textAllCaps="false" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/brand"
                android:textColor="@color/select_default_text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp">

                <AutoCompleteTextView
                    android:id="@+id/brand_dropdown_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/mark_pro"
                    android:inputType="none"
                    android:text="@string/choose_brand" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/price"
                android:textColor="@color/select_default_text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp">

                <AutoCompleteTextView
                    android:id="@+id/price_dropdown_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/mark_pro"
                    android:inputType="none"
                    android:text="@string/choose_price" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/size"
                android:textColor="@color/select_default_text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp">

                <AutoCompleteTextView
                    android:id="@+id/size_dropdown_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/mark_pro"
                    android:inputType="none"
                    android:text="@string/choose_size" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>