<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/card_item"
    android:background="@drawable/background_view_pager_item"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="199dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/hs_logo_new_sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="23dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eclipse_view_pager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro"
                android:text="@string/hs_logo_text"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </FrameLayout>

        <TextView
            android:id="@+id/hs_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/sf_pro"
            android:text="@string/hs_main_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hs_second_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sf_pro"
            android:text="@string/hs_second_text"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hs_button"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/sf_pro"
            android:text="@string/button_buy_now"
            android:textAllCaps="false"
            android:textColor="@color/select_default_text_color"
            android:textSize="11sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/hs_image"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:src="@drawable/ic_launcher_foreground" />
</LinearLayout>