<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/select_default_text_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/phone_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/white" />

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/phone_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/mark_pro"
                android:text="@string/phonename"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cost_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/_3000_00"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="26dp"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_counter_bar">

            <ImageView
                android:id="@+id/discrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="16dp"
                android:src="@drawable/discrement" />

            <TextView
                android:id="@+id/item_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/mark_pro"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/increment_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:src="@drawable/increment" />
        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/basket" />
    </LinearLayout>
</LinearLayout>