<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".presentation.SelectCategoryFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/select_phones_card_view"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="35dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/phone_vector" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/select_phones_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/phones"
                android:textColor="@color/select_default_text_color"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/select_computers_card_view"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="35dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/computer_vector" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/select_computers_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/computer"
                android:textColor="@color/select_default_text_color"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/select_health_card_view"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="35dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/health_vector" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/select_health_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/health"
                android:textColor="@color/select_default_text_color"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/select_books_card_view"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="35dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/books_vector" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/select_books_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/books"
                android:textColor="@color/select_default_text_color"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/select_example_card_view"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="35dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/books_vector" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/select_example_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/books"
                android:textColor="@color/select_default_text_color"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

</HorizontalScrollView>